--- a/backend/package.json
+++ b/backend/package.json
@@ -16,15 +16,25 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/express-validator": "^2.20.33",
-    "@types/node": "^16.11.10",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^16.18.108",
+    "@types/unzipper": "^0.10.10",
+    "@types/xmldom": "^0.1.34",
     "express": "^5.0.0",
     "ts-node": "10.9.1",
     "typescript": "4.5.2"
   },
   "dependencies": {
+    "@nodecfdi/cfdi-to-json": "^1.2.3",
+    "@nodecfdi/cfdiutils-core": "^0.7.1",
+    "@nodecfdi/credentials": "^3.1.0",
+    "@xmldom/xmldom": "^0.9.2",
+    "adm-zip": "^0.5.16",
     "express-validator": "^7.2.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.2",
     "sequelize": "^6.37.3",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize-typescript": "^2.1.6",
+    "unzipper": "^0.12.3"
   }
 }
