--- a/backend/package.json
+++ b/backend/package.json
@@ -19,12 +19,15 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^16.18.108",
     "@types/unzipper": "^0.10.10",
+    "@types/xml2js": "^0.4.14",
     "@types/xmldom": "^0.1.34",
     "express": "^5.0.0",
     "ts-node": "10.9.1",
     "typescript": "4.5.2"
   },
   "dependencies": {
+    "@nodecfdi/cfdi-cleaner": "^2.1.0",
+    "@nodecfdi/cfdi-core": "^0.5.1",
     "@nodecfdi/cfdi-to-json": "^1.2.3",
     "@nodecfdi/cfdiutils-core": "^0.7.1",
     "@nodecfdi/credentials": "^3.1.0",
@@ -34,7 +37,9 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.2",
     "sequelize": "^6.37.3",
+    "sequelize-paginate": "^1.1.6",
     "sequelize-typescript": "^2.1.6",
-    "unzipper": "^0.12.3"
+    "unzipper": "^0.12.3",
+    "xml2js": "^0.6.2"
   }
 }
