--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-validator": "^2.20.33",
     "@types/multer": "^1.4.12",
@@ -33,6 +34,7 @@
     "@nodecfdi/credentials": "^3.1.0",
     "@xmldom/xmldom": "^0.9.2",
     "adm-zip": "^0.5.16",
+    "cors": "^2.8.5",
     "express-validator": "^7.2.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.2",
