--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,7 @@
     "@types/xmldom": "^0.1.34",
     "express": "^5.0.0",
     "ts-node": "10.9.1",
-    "typescript": "4.5.2"
+    "typescript": "^4.5.2"
   },
   "dependencies": {
     "@nodecfdi/cfdi-cleaner": "^2.1.0",
@@ -35,6 +35,7 @@
     "@xmldom/xmldom": "^0.9.2",
     "adm-zip": "^0.5.16",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express-validator": "^7.2.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.2",
